--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <body>
 
     <h1>My First Website</h1>
-    <p>My first paragraph.</p>
+    <p>my second paragraph</p>
+    <p>My second paragraph.</p>
 
   </body>
 </html>
