--- a/index.html
+++ b/index.html
@@ -1,13 +1,59 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Page Title</title>
-  </head>
-  <body>
+	<head>
+		<title>Boberick the llama</title>
+		<link rel="stylesheet" href="style.css">
+	</head>
+	<body>
+		<header>
+			<img src="https://codetheweb.blog/assets/img/posts/steps-to-creating-a-website/llama.jpg" class="profile-img">
+			<nav>
+				<ul>
+				<li><a href="#hero">Home</a></li>
+				<li><a href="#about">About</a></li>
+				<li><a href="#contact">Contact</a></li>
+				</ul>
+			</nav>
+		
+		</header>
 
-    <h1>My First Website</h1>
-    <p>my second paragraph</p>
-    <p>My second paragraph.</p>
+		<main>
+			<section id = "hero">
+				<div class="section_inner">
+					<img src="https://codetheweb.blog/assets/img/posts/steps-to-creating-a-website/llama.jpg" class="profile-img">
+					<h1>Hi, I'm Boberick the llama.</h1>
+				</div>
+			</section>
 
-  </body>
+			<section id = "about">
+				<div class="section-inner">
+					<h2>About me</h2>
+					<p>I'm a really awesome llama. Every day I wake up, munch on some grass, do some coding and then fo back to sleep.</p>
+					<h3>Achievements</h3>
+					<ul>
+						<li>Bachelor of photogenic posing, 2010</li>
+						<li>Llamaness certification from the Llama Institute, 2014</li>
+						<li>I coded a website, 2017</li>
+					</ul>
+				</div>
+			
+			</section>
+			<section id = "contact">
+				<div class="section-inner">
+					<h2>Contact me</h2>
+					<p>You can find me on:</p>
+					<ul>
+						<li><a href="https://twitter.com/llama">Twitter</a></li>
+						<li><a href="https://www.reddit.com/user/llama">Reddit</a></li>
+						<li><a href="https://www.instagram.com/llamasporfavor/">Instagram</a></li>
+					</ul>
+					<p>Or, you can <a href="mailto:llama@codetheweb.blog">send me an email</a>.</p>
+				</div>
+			</section>
+		</main>
+		
+		<footer>
+			&copy; Copyright Boberick The Llama, 2017
+		</footer>
+	</body>
 </html>
